Show breakpoint technical parameters
Review URL: http://codereview.chromium.org/7390024

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
@@ -1,5 +1,8 @@
 AccuratenessControl_LESS_BUTTON=< Less
 AccuratenessControl_MORE_BUTTON=More >
+BreakpointTechnicalInfoPage_CHOOSE_LAUNCH=Choose debug launch:
+BreakpointTechnicalInfoPage_NOT_SET=not set
+BreakpointTechnicalInfoPage_TARGET=Target:
 JavascriptLineBreakpointPage_BreakpointConditionErrorMessage=Breakpoint condition must not be null
 JavascriptLineBreakpointPage_EnableCondition=Enable Condition
 JavascriptLineBreakpointPage_Enabled=Enabled
