--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/messages.properties
@@ -3,5 +3,11 @@
 # found in the LICENSE file.
 
 ChromiumDebugPlugin_InternalError=Internal Error
+ChromiumSourceDirector_WARNING_TEXT_PATTERN=You are running in ''auto-detect'' source look-up mode.\n\
+    However the connected JavaScript VM (version="{0}") does not support it.\n\
+    You won''t be able to set breakpoints except for scripts in virtual project.\n\
+    \n\
+    It is recommended that you switch to ''exact match' look-up mode (or get newer version of JavaScript VM).
+ChromiumSourceDirector_WARNING_TITLE=Auto-Detect Source Look-Up Mode Problem
 SourceNameMapperContainer_NAME=Source mapper with prefix {0}
 VProjectSourceContainer_DEFAULT_TYPE_NAME=Remote V8/Chrome Scripts
