--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -5,7 +5,16 @@ ChromiumRemoteTab_ShowDebuggerNetworkCommunication=Show debugger network communi
 ChromiumRemoteTab_HostLabel=Host:
 ChromiumRemoteTab_PortLabel=Port:
 ChromiumRemoteTab_RemoteTabName=Remote
-ChromiumRemoteTab_INACCURATE_CONTAINER_WARNING=Warning: JavaScript Source Mapper doesn't co-work with Inaccurate Source Lookup
+ChromiumRemoteTab_AUTO_DETECT_CONTAINER_WARNING=Warning: JavaScript Source Mapper doesn't work with Auto-Detect Source Lookup
+ChromiumRemoteTab_AUTODETECT=Auto-detect
+ChromiumRemoteTab_AUTODETECT_LINE1=Only short file names are used.
+ChromiumRemoteTab_AUTODETECT_LINE2=Actual script names are parsed as: 
+ChromiumRemoteTab_EXACT_MATCH=Exact match
+ChromiumRemoteTab_EXACT_MATCH_LINE1=Full script names are used.
+ChromiumRemoteTab_EXACT_MATCH_LINE2=JavaScript Source Name Mapper must be set up in Source tab.
+ChromiumRemoteTab_FILE_PATH=plain file path
 ChromiumRemoteTab_InvalidPortNumberError=Invalid port number
+ChromiumRemoteTab_LOOKUP_GROUP_TITLE=Source look-up method for workspace files
+ChromiumRemoteTab_URL=URL
 # note that this string is a part of the hidden filename, so translate with care
 LaunchType_LogConsoleLaunchName=chromedevtools-logger
