--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
@@ -11,7 +11,8 @@ JavascriptLineBreakpointPage_IgnoreCountErrorMessage=Ignore count must be a posi
 JsLineBreakpointPage_LineNumberLabel=Line Number:
 JsLineBreakpointPage_ResourceLabel=Resource:
 JsLineBreakpointPage_UnknownLineNumber=<unknown>
+ScriptFilePage_AUTODETECT_PARAMETER=Auto-detect look-up mode parameters
 ScriptFilePage_CURRENTLY_LINKED_TO_LABEL=Workspace file is currently linked to scripts in debug launches:
-ScriptFilePage_MULTIPLE_INACCURATE_MATCH=(multiple inaccurate match)
+ScriptFilePage_MULTIPLE_AUTODETECT_MATCH=(multiple auto-detect matches)
 ScriptFilePage_NAME_IN_VPROJECT=Name under virtual project: 
 ScriptFilePage_SCRIPT_NAME=Script name: 
