--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
@@ -1,3 +1,4 @@
+AccuratenessControl_LABEL_USE=Use more or less file path components:
 AccuratenessControl_LESS_BUTTON=< Less
 AccuratenessControl_MORE_BUTTON=More >
 BreakpointTechnicalInfoPage_CHOOSE_LAUNCH=Choose debug launch:
