--- a/wiki/ChromeDevToolsSdk.wiki
+++ b/wiki/ChromeDevToolsSdk.wiki
@@ -2,7 +2,11 @@
 #labels Phase-Design
 
 =Overview=
-!ChromeDevTools SDK is a library that enables developers to create ChromeDevToolsProtocol-aware applications (EclipseDebugger is an example of such an application.) The library exposes an API and its default implementation for interaction with the Google Chrome (Chromium) browser or any V8-based application.
+!ChromeDevTools SDK is a library that enables developers to create ChromeDevToolsProtocol-aware applications (EclipseDebugger is an example of such an application.) The library exposes an API and its default implementation for interaction with the Google Chrome (Chromium) browser.
+
+In addition SDK supports following protocols:
+  * [http://code.google.com/p/v8/wiki/DebuggerProtocol V8 debugger protocol] to attach to any V8-based applications,
+  * [WipBackendDevelopment WebKit Remote Debug Protocol] (starting from [Release_0_3_0 0.3.0] release). 
 
 =Binary=
 The library is available as a set of .jar files from Downloads section ("!ChromeDevTools SDK library as tar archive"). It also comprises org.chromium.sdk plugin.
