Edited wiki page WIP through web user interface.

--- a/wiki/WIP.wiki
+++ b/wiki/WIP.wiki
@@ -9,6 +9,13 @@ WIP name stands for "!WebInspector Protocol" and is used withing "Google Chrome 
 
 The development process earned a dedicated [WipBackendDevelopment article].
 
+=== Protocol Name ===
+Protocol is called '!WebKit Debug Protocol'. The name is widely used though. You can be sure that you are using this protocol, if you are starting Google Chrome/Chromium with the following parameter:
+{{{
+--remote-debugging-protocol=<port>
+}}}
+Compare with [ChromeDevToolsProtocol#Protocol_Name].
+
 == !WebKit Debug Protocol ==
 See [http://code.google.com/chrome/devtools/docs/remote-debugging.html].
 Blog posts:
