Edited wiki page ChromeDevToolsProtocol through web user interface.

--- a/wiki/ChromeDevToolsProtocol.wiki
+++ b/wiki/ChromeDevToolsProtocol.wiki
@@ -14,7 +14,7 @@ A single subsystem that uses !ChromeDevTools protocol as a transport for its own
 === Protocol Name ===
 Protocol is called '!ChromeDevTools Protocol'. The name is pretty overloaded though. You can be sure that you are using this protocol, if you are starting Google Chrome/Chromium with the following parameter:
 {{{
---remote-shell-protocol=<port>
+--remote-shell-port=<port>
 }}}
 Compare with [WIP#Protocol_Name WebKit Debug Protocol].
 
