--- a/wiki/WIP.wiki
+++ b/wiki/WIP.wiki
@@ -1,7 +1,7 @@
 #summary WIP term explained
 
 = Introduction =
-WIP is a codename for adopting a new debug protocol -- [#WebKit_Debug_Protocol WebKit Debug Protocol]. Google Chrome/Chromium have used ChromeDevToolsProtocol for remote debugging (which is a slightly extended [http://code.google.com/p/v8/wiki/DebuggerProtocol V8 debugger protocol].) However currently browser is switching to a new one.
+WIP is a codename for adopting a new debug protocol -- [#WebKit_Remote_Debugging_Protocol WebKit Remote Debugging Protocol]. Google Chrome/Chromium have used ChromeDevToolsProtocol for remote debugging (which is a slightly extended [http://code.google.com/p/v8/wiki/DebuggerProtocol V8 debugger protocol].) However currently browser is switching to a new one.
 
 WIP name stands for "!WebInspector Protocol" and is used withing "Google Chrome Developer Tools for Java" project only, mostly for historical reasons.
 
@@ -16,7 +16,7 @@ Protocol is called '!WebKit Debug Protocol'. The name is widely used though. You
 }}}
 Compare with [ChromeDevToolsProtocol#Protocol_Name ChromeDevTools Protocol].
 
-== !WebKit Debug Protocol ==
+== !WebKit Remote Debugging Protocol ==
 See [http://code.google.com/chrome/devtools/docs/remote-debugging.html].
 Blog posts:
   * [http://blog.chromium.org/2011/05/remote-debugging-with-chrome-developer.html Remote debugging with Chrome Developer Tools], The Chromium Blog, May 9th, 2011,
