--- a/wiki/ChromeDevToolsSdk.wiki
+++ b/wiki/ChromeDevToolsSdk.wiki
@@ -6,10 +6,15 @@
 
 In addition SDK supports following protocols:
   * [http://code.google.com/p/v8/wiki/DebuggerProtocol V8 debugger protocol] to attach to any V8-based applications,
-  * [WipBackendDevelopment WebKit Remote Debug Protocol] (starting from [Release_0_3_0 0.3.0 release]). 
+  * [Wip WebKit Remote Debugging Protocol] (starting from [Release_0_3_0 0.3.0 release]), subproject called 'WIP'.
+
+=== WIP Backends ===
+!WebKit Remote Debugging Protocol support (WIP) is deployed in form of separate modules called backends. Each backend corresponds to a particular version of the protocol (see a [Release_0_3_0#WIP_Backends table] in release notes). Note that all backends share the same class names, so you can put only one backend in the classpath at the same time. This is not a problem when using Eclipse plugin dynamic loading and you can do the same manipulations with the Java classloaders if needed.   
 
 =Binary=
 The library is available as a set of .jar files from Downloads section ("!ChromeDevTools SDK library as tar archive"). It also comprises org.chromium.sdk plugin.
+
+
 
 =Sources=
 Sources could be found in project SVN under the path:
