--- a/wiki/WIP.wiki
+++ b/wiki/WIP.wiki
@@ -3,6 +3,8 @@
 = Introduction =
 WIP is a codename for adopting a new debug protocol -- [#WebKit_Remote_Debugging_Protocol WebKit Remote Debugging Protocol]. Google Chrome/Chromium have used ChromeDevToolsProtocol for remote debugging (which is a slightly extended [http://code.google.com/p/v8/wiki/DebuggerProtocol V8 debugger protocol].) However currently browser is switching to a new one.
 
+The new protocol is an internal protocol of in-browser Developer Tools.
+
 WIP name stands for "!WebInspector Protocol" and is used withing "Google Chrome Developer Tools for Java" project only, mostly for historical reasons.
 
 'WIP' term should be gone when the support reaches stable state and becomes a regular part of the project.
