--- a/wiki/Release_0_3_0.wiki
+++ b/wiki/Release_0_3_0.wiki
@@ -40,3 +40,9 @@ As of 0.3.0 you need to set the correct backend manually. See the [#WIP_Backends
 
 ==SDK==
 ==WIP Backends==
+
+The list of available WIP backend versions. They get installed within a feature "ChromeDevTools SDK WIP Backends".
+|| id || Chrome version || Debugger limitations || SDK limitations ||
+|| WK@87771 || 13.0.782.112 (stable) || Auto-detect mode is missing,<br>live edit preview is missing. || '!RegExp' breakpoint targets unsupported,<br>live edit preview is missing. ||
+|| WK@91698 || 14.0.835.`*` (beta) || || ||
+|| WK@93101 || 15.0.855.`*`<br>dev build#97053 || || ||
