--- a/wiki/Release_0_3_0.wiki
+++ b/wiki/Release_0_3_0.wiki
@@ -35,35 +35,35 @@ This release adds an [WIP experimental support] for a new debug protocol used in
 
 From the user point of view switching to the new protocol shouldn't be visible. The most obvious change is that ref-id in Variables/Expressions views: the have a different format and are completely random, so that the same object may appear with the different ids in the same view. 
 
-To try the new protocol you should make sure that you installed feature "ChromeDevTools SDK WIP Backends". That should reveal how WIP support is currently deployed. There are several (incompatible) versions of protocol supported and you can choose between them: the older protocol version corresponds to the current stable release of Chrome (13), but it misses some features; the newer protocol version comes with a development yet-not-stable builds. The separate feature "ChromeDevTools SDK WIP Backends" installs the current collection of backends and updating this feature should install newer WIP backends in the future as the protocol evolves.
+To try the new protocol you should make sure that you installed feature "!ChromeDevTools SDK WIP Backends". That should reveal how WIP support is currently deployed. There are several (incompatible) versions of protocol supported and you can choose between them: the older protocol version corresponds to the current stable release of Chrome (13), but it misses some features; the newer protocol version comes with a development yet-not-stable builds. The separate feature "!ChromeDevTools SDK WIP Backends" installs the current collection of backends and updating this feature should install newer WIP backends in the future as the protocol evolves.
 
 As of 0.3.0 you need to set the correct backend manually. See the [#WIP_Backends table] below.
 
-1. Create a debug configuration of "WebKit Protocol" type.
+1. Create a debug configuration of "!WebKit Protocol" type.
 2. In 'Remote' tab select the proper backend version.
 
 ===Exceptions===
 Debugger started to better support exceptions. If you stopped on exception (see {{{Break on JavaScript Exceptions}}} in LaunchElement) or got an exception as a result of expression evaluate, now you have the access to the exception value: you can expand its properties or pin-point an object or do whatever is available from Variables view.
 
 ===Object In with Statement===
- Similarly to exceptions if you paused inside {{{with}}} statement, you can see its argument in Variables view and get a full access to it. Note that JavaScript VM may be not fully accurate and give you wrapper-object instead of original primitive value used in {{{with}}} statement.
+Similarly to exceptions if you paused inside {{{with}}} statement, you can see its argument in Variables view and get a full access to it. Note that !JavaScript VM may be not fully accurate and give you wrapper-object instead of original primitive value used in {{{with}}} statement.
 
 ===Separate Folders For Unnamed Scripts===
 All scripts that are currently loaded in VM are shown under a VirtualProject. To keep things more clear, scripts without a name (e.g. eval'd) are put in a separate folder.
 
 ===JSDT Integration Feature Notes===
-"Chromium JavaScript Debugger Bridge to JSDT" feature became less important. It used to bind JSDT native breakpoints. However Eclipse allows to create any type of breakpoints in any editor (see {{{Run | Breakpoint Types}}}), so this code was dropped. However the feature is still useful if you want to use JSDT formatted in {{{V8 Debugging | Temporarily Format Source}}} action.
+"Chromium !JavaScript Debugger Bridge to JSDT" feature became less important. It used to bind JSDT native breakpoints. However Eclipse allows to create any type of breakpoints in any editor (see {{{Run | Breakpoint Types}}}), so this code was dropped. However the feature is still useful if you want to use JSDT formatted in {{{V8 Debugging | Temporarily Format Source}}} action.
 
 ==SDK==
 The main change in SDK is the support of new protocol that is locally called [WIP].
 
 Other changes are moderate interfaces redesign, support for clearing internal property caches (see [http://code.google.com/p/chromedevtools/issues/detail?id=44 issue#44]) and a faster JSON parser that is implemented without Java reflection.
 
-This SDK version does not support any new feature that [WIP !WebKit Remote Debugging Protocol] offers. However this is planned for the next releases. 
+This SDK version does not support any new feature that [WIP WebKit Remote Debugging Protocol] offers. However this is planned for the next releases. 
 
 ==WIP Backends==
 
-The list of available WIP backend versions. They get installed within a feature "ChromeDevTools SDK WIP Backends".
+The list of available WIP backend versions. They get installed within a feature "!ChromeDevTools SDK WIP Backends".
 || id || Chrome version || Debugger limitations || SDK limitations ||
 || WK@87771 || 13.0.782.112 (stable) || Auto-detect mode is missing,<br>live edit preview is missing. || '!RegExp' breakpoint targets unsupported,<br>live edit preview is missing. ||
 || WK@91698 || 14.0.835.`*` (beta) || || ||
